updated off center video

--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
     nav a:hover {
       color: #ffffff;
     }
-    nav a:hover {
-      color: #ffffff;
-    }
     section {
       padding: 4rem 1.5rem;
       max-width: 1200px;
@@ -75,23 +72,30 @@
       overflow: hidden;
       box-shadow: 0 25px 50px rgba(0,0,0,0.7);
       border: 1px solid rgba(124,45,18,0.35);
-
       max-width: 900px;
       margin: 0 auto;
-
-      background: linear-gradient(180deg, #020617, #020617cc);
-      border-radius: 18px;
-      overflow: hidden;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
       transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
     .card:hover {
       transform: translateY(-6px);
-      box-shadow: 0 30px 60px rgba(0,0,0,0.7);
+      box-shadow: 0 35px 80px rgba(220,38,38,0.35);
     }
-    .card img, .card video {
+    .card img {
       width: 100%;
       display: block;
+    }
+    .video-wrapper {
+      display: flex;
+      justify-content: center;
+      padding: 1.25rem 0;
+      background: #000;
+    }
+    .video-wrapper iframe {
+      width: 100%;
+      max-width: 420px;
+      aspect-ratio: 9 / 16;
+      border-radius: 12px;
+      border: none;
     }
     .card-content {
       padding: 1.25rem 1.25rem 1.5rem;
@@ -109,26 +113,7 @@
       font-size: 0.9rem;
       color: #9ca3af;
     }
-    .btn {
-      display: inline-block;
-      margin-top: 0.75rem;
-      padding: 0.6rem 1.4rem;
-      background: linear-gradient(135deg, #dc2626, #7c2d12);
-      color: #fff;
-      border-radius: 999px;
-      text-decoration: none;
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    .btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 25px rgba(220,38,38,0.5);
-    }
-    .btn:hover {
-      transform: scale(1.05);
-    }
-      /* Animations */
+    /* Animations */
     .fade-in {
       opacity: 0;
       transform: translateY(20px);
@@ -137,10 +122,6 @@
     .fade-in.visible {
       opacity: 1;
       transform: translateY(0);
-    }
-
-    .card:hover {
-      box-shadow: 0 35px 80px rgba(220,38,38,0.35);
     }
   </style>
 </head>
@@ -173,12 +154,15 @@
 
     <!-- Project: Legendary: Game of Heroes -->
     <div class="card fade-in">
-      <iframe
-        height="420"
-        src="https://www.youtube.com/embed/d6ehnXMXmIo"
-        title="Legendary: Game of Heroes"
-        allowfullscreen>
-      </iframe>
+      <div class="video-wrapper">
+        <div class="video-wrapper">
+        <iframe
+          src="https://www.youtube.com/embed/d6ehnXMXmIo"
+          title="Legendary: Game of Heroes"
+          allowfullscreen>
+        </iframe>
+      </div>
+      </div>
 
       <div class="card-content">
         <h3>Legendary: Game of Heroes</h3>
