fixed email address and updated image name

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 
   <section id="contact" class="fade-in">
     <h2>Contact</h2>
-    <p>Email: samesuda@yahoo.com</p>
+    <p>Email: smesuda@yahoo.com</p>
     <p>LinkedIn: linkedin.com/in/shane-mesuda-95007929</p>
-    <p>Available for Game Designer or Systems Designer roles</p>
+    <p>Available for Game Designer or Quality Assurance Roles</p>
   </section>
 
   <footer>
