--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </p>
         <p><strong>Problem:</strong> Declining player sentiment and shrinking active player population.</p>
         <ul>
-          <li>Designed Hero Skills to deepen combat strategy and build diversity</li>
+          <li>Designed Hero Skill to deepen combat strategy and build diversity</li>
           <li>Created Mythic Legends and Relics to provide long-term progression goals</li>
           <li>Designed a new series of Cudgels as a long-term chase item for veteran players</li>
           <li>Authored design specs and collaborated with engineering and live ops</li>
