--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <!-- Project: Legendary: Heroes Unchained -->
     <div class="card fade-in">
-      <img src="images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
+      <img src="Images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
 
       <div class="card-content">
         <h3>Legendary: Heroes Unchained</h3>
