--- a/index.html
+++ b/index.html
@@ -5,124 +5,154 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Game Design Portfolio</title>
   <style>
+    :root {
+      --text: #111827;
+      --muted: #4b5563;
+      --border: #e5e7eb;
+      --bg: #ffffff;
+      --card: #ffffff;
+    }
+
+    * { box-sizing: border-box; }
+
     body {
       margin: 0;
-      font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: radial-gradient(circle at top, #1a0f1f, #020617);
-      color: #e5e7eb;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.55;
     }
+
     header {
-      background: linear-gradient(135deg, #7c2d12, #dc2626);
-      padding: 4.5rem 1.5rem;
-      text-align: center;
+      padding: 3rem 1.25rem 1.5rem;
+      max-width: 900px;
+      margin: 0 auto;
     }
+
     header h1 {
       margin: 0;
-      font-size: 3.2rem;
-      letter-spacing: -1px;
+      font-size: 2.25rem;
+      letter-spacing: -0.5px;
     }
+
     header p {
-      max-width: 720px;
-      margin: 1rem auto 0;
-      font-size: 1.25rem;
-      opacity: 0.95;
+      margin: 0.75rem 0 0;
+      color: var(--muted);
+      font-size: 1.05rem;
+      max-width: 70ch;
     }
+
     nav {
-      background: rgba(10, 3, 15, 0.9);
-      padding: 0.9rem;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      backdrop-filter: blur(10px);
-      z-index: 10;
-      border-bottom: 1px solid rgba(220,38,38,0.3);
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 1.25rem 1.5rem;
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
+
     nav a {
-      color: #fca5a5;
-      margin: 0 1rem;
+      color: var(--text);
       text-decoration: none;
-      font-weight: 600;
-      letter-spacing: 0.5px;
-      transition: color 0.2s ease;
+      border-bottom: 1px solid transparent;
+      padding-bottom: 2px;
     }
+
     nav a:hover {
-      color: #ffffff;
+      border-bottom-color: var(--text);
     }
+
     section {
-      padding: 4rem 1.5rem;
-      max-width: 1200px;
-      margin: auto;
+      padding: 2rem 1.25rem;
+      max-width: 900px;
+      margin: 0 auto;
+      border-top: 1px solid var(--border);
     }
+
     h2 {
-      border-left: 5px solid #dc2626;
-      padding-left: 0.75rem;
-      margin-bottom: 1.5rem;
-      font-size: 1.9rem;
-      letter-spacing: 0.5px;
+      margin: 0 0 1rem;
+      font-size: 1.25rem;
+      letter-spacing: -0.25px;
     }
+
     .projects {
       display: flex;
       flex-direction: column;
-      gap: 3rem;
-      margin-top: 2rem;
+      gap: 2rem;
+      margin-top: 1rem;
     }
+
     .card {
-      background: linear-gradient(180deg, #0b0215, #020617);
-      border-radius: 18px;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 25px 50px rgba(0,0,0,0.7);
-      border: 1px solid rgba(124,45,18,0.35);
-      max-width: 900px;
-      margin: 0 auto;
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 35px 80px rgba(220,38,38,0.35);
+
+    .media {
+      padding: 1rem;
+      border-bottom: 1px solid var(--border);
     }
-    .card img {
+
+    .media img {
       width: 100%;
       display: block;
+      border-radius: 10px;
+      border: 1px solid var(--border);
     }
+
     .video-wrapper {
       display: flex;
       justify-content: center;
-      padding: 1.25rem 0;
-      background: #000;
     }
+
     .video-wrapper iframe {
       width: 100%;
       max-width: 420px;
       aspect-ratio: 9 / 16;
-      border-radius: 12px;
-      border: none;
+      border-radius: 10px;
+      border: 1px solid var(--border);
     }
+
     .card-content {
-      padding: 1.25rem 1.25rem 1.5rem;
+      padding: 1rem 1.25rem 1.25rem;
     }
+
     .card-content h3 {
-      margin-top: 0;
-      margin-bottom: 0.25rem;
-      font-size: 1.25rem;
+      margin: 0 0 0.5rem;
+      font-size: 1.1rem;
     }
+
+    .card-content p {
+      margin: 0.5rem 0;
+      color: var(--text);
+    }
+
+    .card-content p strong {
+      color: var(--text);
+    }
+
+    .card-content ul {
+      margin: 0.75rem 0 0;
+      padding-left: 1.25rem;
+      color: var(--text);
+    }
+
+    .card-content li {
+      margin: 0.25rem 0;
+    }
+
     footer {
-      background: #020617;
-      text-align: center;
-      padding: 2rem 1rem;
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #9ca3af;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem 1.25rem 3rem;
+      color: var(--muted);
+      font-size: 0.95rem;
+      border-top: 1px solid var(--border);
     }
-    /* Animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-    .fade-in.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
+
+    /* Remove previous animation styling if present */
+    .fade-in { opacity: 1 !important; transform: none !important; }
   </style>
 </head>
 <body>
@@ -154,15 +184,15 @@
 
     <!-- Project: Legendary: Game of Heroes -->
     <div class="card fade-in">
+      <div class="media">
       <div class="video-wrapper">
-        <div class="video-wrapper">
         <iframe
           src="https://www.youtube.com/embed/d6ehnXMXmIo"
           title="Legendary: Game of Heroes"
           allowfullscreen>
         </iframe>
       </div>
-      </div>
+    </div>
 
       <div class="card-content">
         <h3>Legendary: Game of Heroes</h3>
@@ -172,7 +202,7 @@
         </p>
         <p><strong>Problem:</strong> Declining player sentiment and shrinking active player population.</p>
         <ul>
-          <li>Designed Hero Skill to deepen combat strategy and build diversity</li>
+          <li>Designed Hero Skills to deepen combat strategy and build diversity</li>
           <li>Created Mythic Legends and Relics to provide long-term progression goals</li>
           <li>Designed a new series of Cudgels as a long-term chase item for veteran players</li>
           <li>Authored design specs and collaborated with engineering and live ops</li>
@@ -183,7 +213,9 @@
 
     <!-- Project: Legendary: Heroes Unchained -->
     <div class="card fade-in">
-      <img src="Images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
+      <div class="media">
+        <img src="Images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
+      </div>
 
       <div class="card-content">
         <h3>Legendary: Heroes Unchained</h3>
@@ -206,24 +238,14 @@
 
   <section id="contact" class="fade-in">
     <h2>Contact</h2>
-    <p>Email: smesuda@yahoo.com</p>
+    <p>Email: samesuda@yahoo.com</p>
     <p>LinkedIn: linkedin.com/in/shane-mesuda-95007929</p>
-    <p>Available for Game Designer or Quality Assurance Roles</p>
+    <p>Available for Game Designer or Systems Designer roles</p>
   </section>
 
   <footer>
     © 2026 Shane Mesuda — Game Design Portfolio
   </footer>
-<script>
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('visible');
-      }
-    });
-  }, { threshold: 0.15 });
 
-  document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
-</script>
 </body>
 </html>
