--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     }
 
     .media {
-      padding: 1rem;
+      padding: 0.9rem 1rem 1rem;
       border-bottom: 1px solid var(--border);
     }
 
@@ -115,12 +115,12 @@
     }
 
     .card-content {
-      padding: 1rem 1.25rem 1.25rem;
+      padding: 0.9rem 1.25rem 1.1rem;
     }
 
     .card-content h3 {
-      margin: 0 0 0.5rem;
-      font-size: 1.1rem;
+      margin: 0;
+      font-size: 1.15rem;
     }
 
     .card-content p {
@@ -214,7 +214,7 @@
     <!-- Project: Legendary: Heroes Unchained -->
     <div class="card fade-in">
       <div class="media">
-        <img src="Images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
+        <img src="images/heroes-unchained.jpg" alt="Legendary: Heroes Unchained screenshot">
       </div>
 
       <div class="card-content">
