--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <!-- Project: Legendary: Game of Heroes -->
     <div class="card fade-in">
       <div class="card-content">
+        <h3>Legendary: Game of Heroes</h3>
       </div>
 
       <div class="media">
@@ -247,6 +248,7 @@
     <!-- Project: Legendary: Heroes Unchained -->
     <div class="card fade-in">
       <div class="card-content">
+        <h3>Legendary: Heroes Unchained</h3>
       </div>
 
       <div class="media">
