--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
       --text: #111827;
       --muted: #4b5563;
       --border: #e5e7eb;
-      --bg: #ffffff;
+
+      /* Background + surface contrast */
+      --bg: #f6f7fb;
       --card: #ffffff;
+      --card-shadow: rgba(17, 24, 39, 0.08);
+      --card-shadow-hover: rgba(17, 24, 39, 0.14);
+
+      /* Accent (subtle, game-ish) */
+      --accent: #7c3aed;
+      --accent-soft: rgba(124, 58, 237, 0.10);
     }
 
     * { box-sizing: border-box; }
@@ -18,7 +26,11 @@
     body {
       margin: 0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      background: var(--bg);
+      background:
+        radial-gradient(circle at 20% 10%, rgba(124, 58, 237, 0.08), transparent 35%),
+        radial-gradient(circle at 80% 0%, rgba(16, 185, 129, 0.06), transparent 40%),
+        radial-gradient(circle at 60% 90%, rgba(59, 130, 246, 0.06), transparent 45%),
+        var(--bg);
       color: var(--text);
       line-height: 1.55;
     }
@@ -67,6 +79,10 @@
       max-width: 900px;
       margin: 0 auto;
       border-top: 1px solid var(--border);
+
+      /* Make content feel like it sits on a surface */
+      background: rgba(255, 255, 255, 0.55);
+      backdrop-filter: blur(6px);
     }
 
     h2 {
@@ -84,14 +100,18 @@
 
     .card {
       background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 12px;
+      border: 1px solid rgba(17, 24, 39, 0.08);
+      border-radius: 14px;
       overflow: hidden;
+      box-shadow: 0 18px 45px var(--card-shadow);
     }
 
     .media {
       padding: 0.9rem 1rem 1rem;
-      border-bottom: 1px solid var(--border);
+      border-bottom: 1px solid rgba(17, 24, 39, 0.08);
+      background:
+        radial-gradient(circle at 30% 20%, var(--accent-soft), transparent 55%),
+        rgba(255, 255, 255, 0.65);
     }
 
     .media img {
@@ -156,9 +176,9 @@
       transition: transform 220ms ease, box-shadow 220ms ease, border-color 220ms ease;
     }
     .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 14px 30px rgba(17, 24, 39, 0.10);
-      border-color: #d1d5db;
+      transform: translateY(-3px);
+      box-shadow: 0 26px 70px var(--card-shadow-hover);
+      border-color: rgba(124, 58, 237, 0.25);
     }
 
     /* Fade-in on scroll */
@@ -181,7 +201,7 @@
       display: block;
       margin-top: 0.5rem;
       height: 1px;
-      background: var(--border);
+      background: linear-gradient(90deg, rgba(124,58,237,0.35), rgba(17,24,39,0.08));
     }
   </style>
 </head>
@@ -229,6 +249,7 @@
     </div>
 
       <div class="card-content">
+        <h3>Legendary: Game of Heroes</h3>
         <p><strong>Role:</strong> Game Designer</p>
         <p>
           Led the design of multiple core systems and features including Hero Skills, Mythic Legends, Mythic Legend Relics, and a new series of Cudgels as long-term chase items.
@@ -255,6 +276,7 @@
       </div>
 
       <div class="card-content">
+        <h3>Legendary: Heroes Unchained</h3>
         <p><strong>Role:</strong> Game Designer</p>
         <p>
           Designed the foundational rewards economy for a new game, establishing how players earned and spent resources across progression and events.
