--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       /* Background + surfaces */
       --bg: #000000;
-      --card: #050505;
+      --card: #111111;
       --card-shadow: rgba(0, 0, 0, 0.55);
       --card-shadow-hover: rgba(0, 0, 0, 0.75);
 
@@ -80,6 +80,11 @@
       background: transparent;
     }
 
+    /* Subtle content column contrast */
+    section#projects {
+      padding-top: 2.5rem;
+    }
+
     h2 {
       margin: 0 0 1rem;
       font-size: 1.25rem;
@@ -94,11 +99,11 @@
     }
 
     .card {
-      background: var(--card);
-      border: 1px solid rgba(255, 255, 255, 0.22);
+      background: linear-gradient(180deg, #111111 0%, #0d0d0d 100%);
+      border: 1px solid rgba(255, 255, 255, 0.18);
       border-radius: 14px;
       overflow: hidden;
-      box-shadow: 0 18px 45px var(--card-shadow);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.65);
       transition: transform 220ms ease, box-shadow 220ms ease, border-color 220ms ease;
     }
 
